tests/shouldPass/smallTwofile-link1.c
static int f(void);
int main(void){
	return f();
}

static int f(void){
	return 7;
}
