tests/shouldFail/j303a.c
int a[5];
const int a[5];

int main(void){
	return 0;
}
